# send_to_hr

./: .env.example  .gitignore  README.md  database.py  email_worker.py  index.py  job_worker.py  progress.txt  pyproject.toml  rules.py
.github/workflows/: ci-cd.yml
